added more auto commands for intaking and outtaking, made path generator better